microservice_arch/homework_2/k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: otus-hello-app
  template:
    metadata:
      labels:
        app: otus-hello-app
    spec:
      containers:
        - name: hello-deployment
          image: health-check:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 8000
      restartPolicy: Always
