microservice_arch/homework_2/k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: hello-service
spec:
  selector:
    app: otus-hello-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
  type: NodePort
