microservice_arch/homework_2/k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: otus-hw1
  namespace: m
  labels:
    app: otus-hello-app
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    kubernetes.io/ingress.class: "nginx"
spec:
  ingressClassName: nginx
  rules:
    - host: arch.homework
      http:
        paths:
          - path: /otusapp/kunschikov(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: otus-hello-app
                port:
                  number: 8000
